# file-utils

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: dedup.rs  main.rs  rand.rs  smart_dedup.rs
